--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "titlefy"
+name = "titlelist"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,5 +13,5 @@ reqwest = "0.11.16"
 scraper = "0.16.0"
 
 [dependencies.tokio]
+features = ["macros", "rt", "rt-multi-thread", "fs", "io-std", "io-util"]
 version = "1.27.0"
-features = ["macros", "rt", "rt-multi-thread", "fs"]
