Add bin section to manifest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "titlelist"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "titlelist"
+
 [dependencies]
 clap = { version = "4.2.4", features = ["derive"] }
 eyre = "0.6.8"
